--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="title_activity_playlist">PlaylistActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="play_icon">&#xf04b;</string>
+    <string name="pause_icon">&#xf04c;</string>
+    <string name="skip_icon">&#xf051;</string>
 </resources>
