--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="play_icon">&#xf04b;</string>
     <string name="pause_icon">&#xf04c;</string>
     <string name="skip_icon">&#xf051;</string>
+    <string name="spotify_icon">Connect with Spotify &#xf1bc;</string>
 </resources>
